Changes made for digital portfolio

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!-- Font Awesome Styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Custom Sytles -->
+    <!-- Custom Styles -->
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body class="bg-dark text-white">
     <!-- The container-fluid div ensures content spans the entire width -->
 
     <!-- Navigation -->
@@ -34,17 +34,21 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                    <a class="nav-link" href="#photos">Photos</a>
+                    <a class="nav-link" href="#videos">Videos</a>
                     <a class="nav-link" href="#about">About</a>
                     <a class="nav-link" href="#contact">Contact</a>
                 </div>
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
+
+    <div class="container px-4">
         <!-- Header Section -->
-        <header role="banner">
+        <header role="banner" class="mb-5">
             <!-- Carousel (Slideshow) -->
-            <div id="carouselExampleIndicators" class="carousel slide pb-4">
+            <div id="carouselExampleIndicators" class="carousel slide pb-4" data-bs-ride="carousel"
+                data-bs-interval="3000">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                         class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -53,24 +57,21 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                 </div>
-                <!-- Carousel items -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="images/slide1.jpeg" class="d-block w-100" alt="A busy street in Amsterdam">
                         <div class="carousel-caption d-md-block text-center">
                             <h1>Hi! I'm Lexi.</h1>
-                            <p class="fs-4">Welcome to my world of Photography!</p>
+                            <p class="fs-4">I turn life's moments into timeless memories.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="images/slide2.jpeg" class="d-block w-100" alt="Top mountain view in Paris">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/slide3.png" class="d-block w-100"
-                            alt="A beach view in a water park">
+                        <img src="images/slide3.png" class="d-block w-100" alt="A beach view in a water park">
                     </div>
                 </div>
-                <!-- Carousel navigation buttons -->
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -83,9 +84,10 @@
                 </button>
             </div>
         </header>
-        <!-- Main Content Section -->
-        <main role="main">
-            <!-- Photo Gallery divided in three columns-->
+
+        <!-- Photo Gallery Section -->
+        <section id="photos" class="my-5">
+            <h2 class="text-center mb-4">Photo Gallery</h2>
             <div class="row">
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                     <img src="images/work1.jpg" class="w-100 shadow-1-strong rounded mb-4"
@@ -95,7 +97,6 @@
                         alt="a sculpture of a man on a horse in a square">
                     <img src="images/work7.jpeg" class="w-100 shadow-1-strong rounded mb-4"
                         alt="a busy tourist street in Amsterdam">
-
                 </div>
 
                 <div class="col-lg-4 mb-4 mb-lg-0">
@@ -108,90 +109,123 @@
 
                 <div class="col-lg-4 mb-4 mb-lg-0">
                     <img src="images/work5.jpg" class="w-100 shadow-1-strong rounded mb-4"
-                        alt="a sculputure in a museum">
+                        alt="a sculpture in a museum">
 
                     <img src="images/work6.jpg" class="w-100 shadow-1-strong rounded mb-4"
-                        alt="Altar to the homeland in mexico city">
+                        alt="Altar to the homeland in Mexico City">
                     <img src="images/work8.jpeg" class="w-100 shadow-1-strong rounded mb-4"
                         alt="A river view at sunset">
                 </div>
             </div>
-            <!-- About section divided in two columns-->
-            <div class="card mb-3" id="about">
-                <div class="row g-0">
-                    <div class="col-md-3">
-                        <img src="images/profile.jpeg" class="img-fluid rounded-start"
-                            alt="profile photo of the website author">
+        </section>
+
+        <!-- Video Section -->
+        <section id="videos" class="my-5">
+            <h2 class="text-center my-5">Featured Videos</h2>
+            <div class="row justify-content-center align-items-start gy-lg-5 gx-lg-5">
+                <!-- Video 1 and Description -->
+                <div class="col-lg-5 col-md-6 mb-4">
+                    <div class="description mb-3">
+                        <p class="fw-bold mb-1">Surviving the Shanghai Lockdown: Clark's Story</p>
+                        <p>This video features an interview with Clark, who experienced the infamous Shanghai lockdown
+                            during the pandemic. Hear his stories and insights on how to survive under such challenging
+                            circumstances. I directed and edited this video to bring Clark’s unique journey to life.</p>
                     </div>
-                    <div class="col-md-9">
-                        <div class="card-body">
-                            <h2 class="card-title">About Me</h2>
-                            <p class="card-text">Hello there, I'm Lexi! I'm on a mission to capture life's best moments
-                                through my lens. Whether it's snapping vibrant photos or creating captivating videos,
-                                I've got a knack for turning ordinary scenes into extraordinary memories.</p>
+                    <iframe class="shadow-1-strong rounded" width="100%" height="315"
+                        src="https://www.youtube.com/embed/RJCVhXuO8wo" title="Video 1"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
 
-                            <p class="card-text">Imagine me as a curious wanderer, trotting across the globe in pursuit
-                                of those breathtaking landscapes that hit you right in the heart. But hold up, I'm not
-                                just about scenery. I'm all about nabbing those genuine emotions and weaving them into
-                                stories that come alive through the images.</p>
+                <!-- Video 2 and Description -->
+                <div class="col-lg-5 col-md-6 mb-4">
+                    <div class="description mb-3">
+                        <p class="fw-bold mb-1">How to Make Authentic Fried Rice: A Satire</p>
+                        <p>This is a satirical and funny take on how to make authentic fried rice. The video humorously
+                            explores the dos and don'ts of fried rice cooking, making it an entertaining watch. I wrote,
+                            directed, and edited the entire video to bring this lighthearted take to life.</p>
+                    </div>
+                    <iframe class="shadow-1-strong rounded" width="100%" height="315"
+                        src="https://www.youtube.com/embed/N2NY4aUyL5E" title="Video 2"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
 
-                            <p class="card-text">If my website were a scrapbook, it'd be bursting at the seams. It's a
-                                virtual treasure chest filled with photos that spill the beans about my adventures and
-                                introduce you to some of the coolest people I've crossed paths with. So, grab your
-                                favorite brew, find a comfy spot, and let's explore the world together, one frame at a
-                                time.</p>
-
-                            <p class="card-text"><small class="text-body-secondary">Yes, me as a child is already cool
-                                    as hell. </small></p>
-                        </div>
+        <!-- About Section -->
+        <section id="about" class="my-5">
+            <div class="row g-5">
+                <div class="col-md-3">
+                    <img src="images/profile.jpeg" class="img-fluid rounded-start"
+                        alt="profile photo of the website author">
+                </div>
+                <div class="col-md-9">
+                    <div class="card-body">
+                        <h2 class="card-title">About Me</h2>
+                        <p class="card-text">Hello there, I'm Lexi! I'm on a mission to capture life's best moments
+                            through my lens. Whether it's snapping vibrant photos or creating captivating videos, I've
+                            got a knack for turning ordinary scenes into extraordinary memories.
+                            Imagine me as a curious wanderer, trotting across the globe in pursuit of
+                            those breathtaking landscapes that hit you right in the heart. But hold up, I'm not just
+                            about scenery. I'm all about nabbing those genuine emotions and weaving them into stories
+                            that come alive through the images.
+                            If my website were a scrapbook, it'd be bursting at the seams. It's a
+                            virtual treasure chest filled with photos and videos that spill the beans about my
+                            adventures and introduce you to some of the coolest people I've crossed paths with. So, grab
+                            your favorite brew, find a comfy spot, and let's explore the world together, one frame at a
+                            time.</p>
                     </div>
                 </div>
             </div>
-            <!-- Contact Section Using Image Overlays -->
-            <div class="card " id="contact">
-                <!-- Background image -->
-                <img src="images/contact_img.jpg" class="card-img " alt="a blured view">
-                <div class="card-img-overlay d-flex flex-column justify-content-center align-items-center">
-                    <h2 class="card-title text-center p-2">Contact Me</h2>
-                    <p class="card-text text-center col-8 p-2">Get ready for some spontaneous creative deliveries! By
-                        "subscribe," I mean you
-                        might just find my latest masterpieces sneakily sliding into your inbox when you least expect
-                        it.</p>
-                    <!-- Contact Form -->
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="my-5">
+            <div class="row">
+                <!-- Contact Information Column -->
+                <div class="col-md-6 mb-4 d-flex flex-column justify-content-center">
+                    <h2 class="mb-4">Contact Me, Here!</h2>
+                    <p class="mb-2"><strong>Phone:</strong> +123-456-7890</p>
+                    <p class="mb-2"><strong>Email:</strong> lexiwu@gmail.com</p>
+                    <p><strong>Address:</strong> 1385 Woodroffe Ave, Ottawa, ON K2G 1V8</p>
+                    <div class="d-flex align-items-center">
+                        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-lg"
+                                style="color: #e92fe2; margin-right: 15px;"></i></a>
+                        <a href="https://www.whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp fa-lg"
+                                style="color: #424ef2;"></i></a>
+                    </div>
+                </div>
+
+                <!-- Contact Form Column -->
+                <div class="col-md-6 mb-4">
                     <form>
                         <!-- Name input -->
-                        <div class="form-outline mb-6">
+                        <div class="form-outline mb-4">
                             <input type="text" placeholder="Your Name" class="form-control mb-3">
                         </div>
 
                         <!-- Email input -->
-                        <div class="form-outline mb-6">
+                        <div class="form-outline mb-4">
                             <input type="email" placeholder="Your Email" class="form-control mb-3">
                         </div>
 
                         <!-- Submit button -->
-                        <div class="d-grid gap-2 col-12 mx-auto mb-6">
-                            <button type="submit" class="btn btn-dark text-white  p-2 text-center">Subscribe</button>
+                        <div class="d-grid gap-2 col-12 mx-auto mb-4">
+                            <button type="submit"
+                                class="btn btn-light bg-dark text-white p-lg-3 text-center">Subscribe</button>
                         </div>
                     </form>
                 </div>
             </div>
-        </main>
+        </section>
     </div>
+
     <!-- Footer Section -->
     <footer class="text-center p-3 mt-4" role="contentinfo">
         <!-- Copyright information and social media icons -->
-        <p>&copy; 2023 by <img src="images/logo2.png" width="60" alt="logo"></p>
-        <p class="socialmedia">
-            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-lg"
-                    style="color: #e92fe2;"></i></a>
-            <a href="https://www.whatsapp.com/" target="_blank"><i class="fa-brands fa-whatsapp fa-lg"
-                    style="color: #424ef2;"></i></a>
-        </p>
-        <!-- Link to quickly return to the top of the page for accessibility -->
-        <a href="#topcontent" class="link-secondary text-center">Back To Top</a>
+        <p>&copy; 2024 by Lexi Wu</p>
     </footer>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
